Aggiunta Tipografia Aggiunto Tag img Aggiunti Colori Aggiunto View Source

--- a/presentazione/index.html
+++ b/presentazione/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <!--
 
@@ -294,21 +294,40 @@ così!</strong>)</q>
         Only one current step has the `present` class.
 
     -->
-    <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
+    <div id="tipografia" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
+        <q>Tipografia</q><br/>
+        
+        <h1>&lt;h1&gt;h1&lt;/h1&gt;</h1> <h2>&lt;h2&gt;h2&lt;/h2&gt;</h2>   <h3>&lt;h3&gt;h3&lt;/h3&gt;</h3>
+        <h4>&lt;h4&gt;h4&lt;/h4&gt;</h4> <h5>&lt;h5&gt;h5&lt;/h5&gt;</h5>   <h6>&lt;h6&gt;h6&lt;/h6&gt;</h6><br/>
+        &lt;p&gt;p&lt;/p&gt; &lt;div&gt;div&lt;/div&gt; <b>&lt;b&gt;b&lt;/b&gt;</b> <s>&lt;s&gt;s&lt;/s&gt;</s>
+        <a target="_blank" href="../esempi/dojo.html">Esempio</a>
+
+</div>
+    <!--<div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
         <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
+    </div>-->
+
+    <div id="immagini" class="step" data-x="6700" data-y="-300" data-scale="6">
+        <b class="rotating">"Un'immagine dice più di mille parole"</b><br />
+        <div class="codeContainer">
+            <pre>
+                <code class="html">
+&lt;img src="img/logocdjp.png" &gt;
+                </code>
+            </pre>
+        </div>
+
+        <img src="img/logocdjp.png" class="rotating" />
     </div>
 
-    <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
+    <!--<div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
         <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
     </div>
 
-    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-        <p>want to know more?</p>
-        <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
-    </div>
+    -->
 
     <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-        <p>one more thing...</p>
+        <p>mettiamoci un po di colore...</p>
     </div>
 
     <!--
@@ -324,8 +343,25 @@ così!</strong>)</q>
 
     -->
     <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="2">
-        <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-        <span class="footnote">* beat that, prezi ;)</span>
+        <p><span class="have">...quale</span> <span class="noticed">preferisci?</span> <span class="its" style="color:red;">rosso</span> <span class="in" style="color:yellow;">giallo</span> <b style="color:#0000FF">o blu<sup>*</sup></b>?</p>
+
+        <div class="codeContainer">
+            <pre>
+            <code class="html">
+&lt;span style="color:red;"&gt;rosso&lt;/span&gt;<br/> 
+&lt;span style="color:yellow;"&gt;giallo&lt;/span&gt; <br /> 
+&lt;b style="color:#0000FF"&gt;o blu&lt;sup&gt;*&lt;/sup&gt;&lt;/b&gt;
+                </code>
+            </pre>
+        </div>
+
+        <span class="footnote">* sarò buono ecco la lista dei <a target="_blank" href="../esempi/colori.html">colori</a>  ;)</span>
+    </div>
+
+    <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
+        <p>Vuoi saperne di più?</p>
+        <q>usa il sorgente, Luke!</q>
+        <img src="img/view_source.png" style="position:absolute; bottom:0; left:0;" />
     </div>
 
     <!--
