--- a/esempi/dojo.html
+++ b/esempi/dojo.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Benvenuto Nel Dojo</h1>
     <h2>Se hai coraggio entra</h2>
-      <a href="dojo.html">
+      <a href="stili.html">
           <img src="img/dojo.png" />
       </a>
   </body>
