--- a/presentazione/index.html
+++ b/presentazione/index.html
@@ -154,28 +154,35 @@
         It will not be rotated or scaled.
 
     -->
-    <div id="intro" class="step slide" data-x="-1000" data-y="-1500">
+    <div id="intro" class="step slide" data-x="-2000" data-y="-1500">
         <img src="img/logocdjp.png" >
         <q>HTML per <strong>ninja</strong>!!!</q>
         <img src="img/intro_ninja.png" style="width:200px; position:absolute;right:20px;">
     </div>
-
-    <!--
-
-        The `id` attribute of the step element is used to identify it in the URL, but it's optional.
-        If it is not defined, it will get a default value of `step-N` where N is a number of slide.
-
-        So in the example below it'll be `step-2`.
-
-        The hash part of the url when this step is active will be `#/step-2`.
-
-        You can also use `#step-2` in a link, to point directly to this particular step.
-
-        Please note, that while `#/step-2` (with slash) would also work in a link it's not recommended.
-        Using classic `id`-based links like `#step-2` makes these links usable also in fallback mode.
-
-    -->
-    <div class="step slide" data-x="0" data-y="-1500">
+	
+	<div id="www" class="step slide" data-x="-1000" data-y="-1500">
+		<q>Cos'è il World Wide Web?</q>
+		<h2>E' un insieme immenso di contenuti collegati tra loro da link</h2>
+		<q>Grazie a Tim Berners-Lee</q>
+		<h2>il W.W.W. nasce ufficialmente il 6 agosto 1991</h2>
+		<img src="img/berners-lee.jpg" style="float:right;" />
+	</div>
+    
+	<div id="browser" class="step slide" data-x="0" data-y="-1500">
+	<div>
+		Il browser è lo strumento che permette di visualizare le pagine html! (Navigare)
+	</div>
+	<br/>
+	<img src="img/browser.png" style="display:block;"  />
+	<div style="float:left;width:350px;"><br><br><br>All'inizio c'era un solo browser poi esplose la "guerra" dei browser!!! </div>
+	
+	<a href="http://it.wikipedia.org/wiki/Browser#Elenco_di_navigatori_.28browser.29" target="_blank">
+		<img src="img/browser-wars.png"  style="float:right;" />
+	</a>
+	</div>
+	
+	
+    <div class="step slide" data-x="1000" data-y="-1500">
         <q>Cosa Vuol dire HTML? <strong>HyperText Markup Language</strong> </q>
         <q style="font-size:70%">Si basa sull'idea che il vostro browser
 Internet é in grado di leggere questi "markup tags". In inglese questo significa che, se
@@ -184,7 +191,7 @@ strong&gt; il browser mostrerà il testo Il mio testo è in grassetto (<strong>i
 così!</strong>)</q>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500">
+    <div class="step slide" data-x="2000" data-y="-1500">
         <q>Spaventati?</q>
         <img src="img/paura.gif">
         <q><strong>Cominciamo?</strong></q>
@@ -296,13 +303,16 @@ così!</strong>)</q>
     -->
     <div id="tipografia" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
         <q>Tipografia</q><br/>
+        <div class="slide" style="width:600px; height:200px;">
+			<h1>&lt;h1&gt;h1&lt;/h1&gt;</h1> <h2>&lt;h2&gt;h2&lt;/h2&gt;</h2>   <h3>&lt;h3&gt;h3&lt;/h3&gt;</h3>
+			<h4>&lt;h4&gt;h4&lt;/h4&gt;</h4> <h5>&lt;h5&gt;h5&lt;/h5&gt;</h5>   <h6>&lt;h6&gt;h6&lt;/h6&gt;</h6><br/>
+			&lt;p&gt;p&lt;/p&gt; &lt;div&gt;div&lt;/div&gt; <b>&lt;b&gt;b&lt;/b&gt;</b> <s>&lt;s&gt;s&lt;/s&gt;</s>
+			
+			<a target="_blank" href="../esempi/dojo.html">Esempio</a>
+		</div>
         
-        <h1>&lt;h1&gt;h1&lt;/h1&gt;</h1> <h2>&lt;h2&gt;h2&lt;/h2&gt;</h2>   <h3>&lt;h3&gt;h3&lt;/h3&gt;</h3>
-        <h4>&lt;h4&gt;h4&lt;/h4&gt;</h4> <h5>&lt;h5&gt;h5&lt;/h5&gt;</h5>   <h6>&lt;h6&gt;h6&lt;/h6&gt;</h6><br/>
-        &lt;p&gt;p&lt;/p&gt; &lt;div&gt;div&lt;/div&gt; <b>&lt;b&gt;b&lt;/b&gt;</b> <s>&lt;s&gt;s&lt;/s&gt;</s>
-        <a target="_blank" href="../esempi/dojo.html">Esempio</a>
 
-</div>
+	</div>
     <!--<div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
         <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas</p>
     </div>-->
@@ -362,6 +372,35 @@ così!</strong>)</q>
         <p>Vuoi saperne di più?</p>
         <q>usa il sorgente, Luke!</q>
         <img src="img/view_source.png" style="position:absolute; bottom:0; left:0;" />
+    </div>
+	
+	
+	<div id="css" class="step" data-x="6300" data-y="2500" data-z="-3000" data-rotate="300" data-scale="1">
+        <p>CSS <b>LINK</b>?</p>
+        <div class="codeContainer">
+        <pre>
+<code class="css">
+body {
+    background-color: #d0e4fe;
+}
+
+h1 {
+    color: orange;
+    text-align: center;
+}
+
+p {
+    font-family: "Times New Roman";
+    font-size: 20px;
+}
+        </code>
+        </pre>
+      </div>
+      <a target="_blank" href="../esempi/stili.html">Esempio</a>
+    </div>
+	
+	<div id="imagination" class="step" data-x="6700" data-y="-300" data-z="-6000" data-scale="6">
+        <p>L'unico <b>limite</b> è la tua <b class="imagination">immaginazione</b></p>
     </div>
 
     <!--
